2006-01-20  Chris Burdess  <dog@gnu.org>

	* gnu/java/net/protocol/http/HTTPURLConnection.java: Don't follow
	  redirects on 304.

2006-01-20  Tom Tromey  <tromey@redhat.com>

	* gnu/java/net/protocol/http/HTTPURLConnection.java (connect):
	Read response body for redirect.

2006-01-16  Anthony Green  <green@redhat.com>

	PR classpath/25803
	* gnu/java/net/protocol/http/Request.java
	  (createResponseBodyStream): Remove Content-Encoding for
	  compressed streams.

2006-01-14  Anthony Green  <green@redhat.com>

        * java/net/ServerSocket.java (accept): Remove bogus
        security check.
	(implAccept): Add FIXME comment.

2005-12-27  Tom Tromey  <tromey@redhat.com>

	* gnu/java/nio/SelectorImpl.java: Added import.

2005-12-26  Anthony Green  <green@redhat.com>

        * java/net/Socket.java (connect): Don't close the socket on
        exceptions.

        * gnu/java/nio/SocketChannelImpl.java (read): Compute the right amount
        of data to read (dst.remaining()).
        * gnu/java/nio/DatagramChannelImpl.java (receive): Ditto.

        * gnu/java/nio/SelectorImpl.java (select): Handle OP_CONNECT
        properly.

2005-11-17  Roman Kennke  <kennke@aicas.com>

	* javax/swing/JEditorPane.java
	(PlainEditorKit): New inner class.
	(createDefaultEditorKit): Return an instance of PlainEditorKit.
	* javax/swing/JTextPane.java
	(insertComponent): Implemented previously stubbed method.
	(insertIcon): Implemented previously stubbed method.

2005-11-17  Roman Kennke  <kennke@aicas.com>

	* javax/swing/plaf/basic/BasicEditorPaneUI.java
	(create): Removed unneeded method.
	* javax/swing/plaf/basic/BasicTextPaneUI.java
	(create): Removed unneeded method.

2005-11-17  Roman Kennke  <kennke@aicas.com>

	* java/awt/Container.java
	(Container): Added comment.
	(remove): Only call removeNotify if removed component is still
	showing.
	(paintComponents): Call paint() instead of super.paint().
	(AccessibleContainerHandler.AccessibleContainerHandler): Added
	comment.